2013-03-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Specify additional files for clean-up.

	* Makefile.in (distclean): Additionally specify...
	(build.tag, build.time): ...these, as removable files.

2013-03-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add a missing distribution dependency.

	* Makefile.in (srcdist): Explicitly require...
	(pkginfo.c): ...this; previously, it was only an implicit build time
	requirement, and may not have persisted until distribution time.

2013-03-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement by-name association of resource scripts with programs.

	* src/guidata.rc: Renamed as...
	* src/guimain.rc: ...this, reflecting its association with...
	* src/guimain.cpp: ...this program source.

	* Makefile.in (GUIMAIN_OBJECTS): Update dependency...
	(%.$OBJEXT:%.rc): ...replacing use of this pattern rule...
	(%.res.$OBJEXT:%.rc): ...with this.

2013-01-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make GUI support visual styles in current Windows versions.

	* src/guidata.rc: Add an appropriate inline manifest resource.

	* src/guiexec.cpp (AppWindowMaker::Invoked): Ensure UpdateWindow() is
	called after the initial call to AdjustLayout(); this is required to
	ensure that all child windows are properly displayed from the outset.

	* src/pkgview.cpp (AppWindowMaker::LayoutEngine):
	[ID_PACKAGE_DATASHEET]: Adjust the top position of the frame, to make
	the border coincide with the bottom border of the tab strip above.

2013-01-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Merge gui-dev branch head to master; close gui-dev branch.

	* configure.ac (AC_INIT): Reset version to 0.6; reset all package
	files to state prevailing at gui-dev branch head.

2013-01-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Create release branch for further r0.5 development.

	* configure.ac (AC_INIT): Bump version number to 0.5.1; assign branch